TEST: Add integration tests for Stop and Searches

--- a/Sources/PoliceDataKit/Resources/en.lproj/Localizable.strings
+++ b/Sources/PoliceDataKit/Resources/en.lproj/Localizable.strings
@@ -28,6 +28,7 @@
 
 "MALE" = "Male";
 "FEMALE" = "Female";
+"OTHER" = "Other";
 
 "PERSON_SEARCH" = "Person search";
 "VEHICLE_SEARCH" = "Vehicle search";
